--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mdi/font": "^7.4.47",
+    "axios": "^1.6.7",
     "vue": "^3.4.21",
     "vuetify": "^3.5.9"
   },
